# robocup3ds

robocup_description/: CMakeLists.txt  package.xml  setup.sh
robocup_description/models/nao_blue/: nao_simple_shapes.urdf
robocup_description/urdf/: robocup.gazebo.xacro  robocup.urdf.xacro  robocup1.urdf.xacro
robocup_launch/: CMakeLists.txt  package.xml
robocup_launch/config/: gazebo_controller.yaml  joint_controller.yaml
robocup_launch/launch/: robocup.launch  robocup_controller.launch
robocup_launch/worlds/: empty_env.world
